# llvm-target-spirv

./: CMakeLists.txt  Enums.td  Instructions.td  InstructionsExt.td  InstructionsOCL.td  OCL20ToSPIRV.cpp  OCLUtil.cpp  OCLUtil.h  Operands.td  README.md  SPIRV.h  SPIRVInternal.h  SPIRVLowerConstExpr.cpp  SPIRVLowerOCLBlocks.cpp  SPIRVReader.cpp  SPIRVRegularizeLLVM.cpp  SPIRVTargetMachine.cpp  SPIRVTargetMachine.h  SPIRVToOCL20.cpp  SPIRVUtil.cpp  SPIRVWriter.cpp  Spirv.td
MCTargetDesc/: CMakeLists.txt  LLVMBuild.txt  SPIRVMCTargetDesc.cpp  SPIRVMCTargetDesc.h
Mangler/: CMakeLists.txt  LLVMBuild.txt  ParameterType.h
Passes/: OCL20To12.cpp  OCL20ToSPIRV.cpp  OCL21ToSPIRV.cpp  OCLTypeToSPIRV.cpp  SPIRVLowerConstExpr.cpp  SPIRVRegularizeLLVM.cpp  SPIRVToOCL20.cpp  TransOCLMD.cpp
TargetInfo/: LLVMBuild.txt  SPIRVTargetInfo.cpp
libSPIRV/: CMakeLists.txt  LLVMBuild.txt  SPIRVDecorate.cpp  SPIRVDecorate.h  SPIRVEntry.cpp  SPIRVEntry.h  SPIRVEnum.h  SPIRVInstruction.h  SPIRVIsValidEnum.h  SPIRVStream.cpp  SPIRVType.h  SPIRVUtil.cpp  SPIRVUtil.h  SPIRVValue.h
